# challenger

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
example/: CMakeLists.txt
example/SDL_helloworld/: CMakeLists.txt  main.cpp
include/challenger/: chDialog.hpp  challenger.hpp  challenger_event.hpp  challenger_memory.hpp  challenger_render.hpp  challenger_video.hpp
src/: chDialog.cpp  challenger_event.cpp  challenger_render.cpp  challenger_video.cpp
